--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.89.0",
+    "framer-motion": "^12.23.26",
     "groq-sdk": "^0.37.0",
     "next": "16.1.1",
     "razorpay": "^2.9.6",
